avaliador_expressoes_visitor/ExpressaoParser.py
# Generated from Expressao.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExpressaoParser ( Parser ):

    grammarFileName = "Expressao.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'^'", "'fact'", 
                     "'absoluto'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "NUMBER", "WS" ]

    RULE_prog = 0
    RULE_expr = 1
    RULE_term = 2
    RULE_power = 3
    RULE_unary = 4
    RULE_atom = 5

    ruleNames =  [ "prog", "expr", "term", "power", "unary", "atom" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    NUMBER=10
    WS=11

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(ExpressaoParser.ExprContext,0)


        def EOF(self):
            return self.getToken(ExpressaoParser.EOF, 0)

        def getRuleIndex(self):
            return ExpressaoParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = ExpressaoParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 12
            self.expr(0)
            self.state = 13
            self.match(ExpressaoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExpressaoParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class PassaTermContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExpressaoParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def term(self):
            return self.getTypedRuleContext(ExpressaoParser.TermContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPassaTerm" ):
                listener.enterPassaTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPassaTerm" ):
                listener.exitPassaTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPassaTerm" ):
                return visitor.visitPassaTerm(self)
            else:
                return visitor.visitChildren(self)


    class SomaContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExpressaoParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ExpressaoParser.ExprContext,0)

        def term(self):
            return self.getTypedRuleContext(ExpressaoParser.TermContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSoma" ):
                listener.enterSoma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSoma" ):
                listener.exitSoma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSoma" ):
                return visitor.visitSoma(self)
            else:
                return visitor.visitChildren(self)


    class SubtracaoContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExpressaoParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ExpressaoParser.ExprContext,0)

        def term(self):
            return self.getTypedRuleContext(ExpressaoParser.TermContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubtracao" ):
                listener.enterSubtracao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubtracao" ):
                listener.exitSubtracao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubtracao" ):
                return visitor.visitSubtracao(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ExpressaoParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = ExpressaoParser.PassaTermContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 16
            self.term(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 26
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 24
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                    if la_ == 1:
                        localctx = ExpressaoParser.SomaContext(self, ExpressaoParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 18
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 19
                        self.match(ExpressaoParser.T__0)
                        self.state = 20
                        self.term(0)
                        pass

                    elif la_ == 2:
                        localctx = ExpressaoParser.SubtracaoContext(self, ExpressaoParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 21
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 22
                        self.match(ExpressaoParser.T__1)
                        self.state = 23
                        self.term(0)
                        pass

             
                self.state = 28
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExpressaoParser.RULE_term

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class MultiplicacaoContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExpressaoParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def term(self):
            return self.getTypedRuleContext(ExpressaoParser.TermContext,0)

        def power(self):
            return self.getTypedRuleContext(ExpressaoParser.PowerContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiplicacao" ):
                listener.enterMultiplicacao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiplicacao" ):
                listener.exitMultiplicacao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultiplicacao" ):
                return visitor.visitMultiplicacao(self)
            else:
                return visitor.visitChildren(self)


    class PassaPowerContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExpressaoParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def power(self):
            return self.getTypedRuleContext(ExpressaoParser.PowerContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPassaPower" ):
                listener.enterPassaPower(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPassaPower" ):
                listener.exitPassaPower(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPassaPower" ):
                return visitor.visitPassaPower(self)
            else:
                return visitor.visitChildren(self)


    class DivisaoContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExpressaoParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def term(self):
            return self.getTypedRuleContext(ExpressaoParser.TermContext,0)

        def power(self):
            return self.getTypedRuleContext(ExpressaoParser.PowerContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDivisao" ):
                listener.enterDivisao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDivisao" ):
                listener.exitDivisao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDivisao" ):
                return visitor.visitDivisao(self)
            else:
                return visitor.visitChildren(self)



    def term(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ExpressaoParser.TermContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_term, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = ExpressaoParser.PassaPowerContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 30
            self.power()
            self._ctx.stop = self._input.LT(-1)
            self.state = 40
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 38
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                    if la_ == 1:
                        localctx = ExpressaoParser.MultiplicacaoContext(self, ExpressaoParser.TermContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_term)
                        self.state = 32
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 33
                        self.match(ExpressaoParser.T__2)
                        self.state = 34
                        self.power()
                        pass

                    elif la_ == 2:
                        localctx = ExpressaoParser.DivisaoContext(self, ExpressaoParser.TermContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_term)
                        self.state = 35
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 36
                        self.match(ExpressaoParser.T__3)
                        self.state = 37
                        self.power()
                        pass

             
                self.state = 42
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class PowerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExpressaoParser.RULE_power

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PassaUnaryContext(PowerContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExpressaoParser.PowerContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def unary(self):
            return self.getTypedRuleContext(ExpressaoParser.UnaryContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPassaUnary" ):
                listener.enterPassaUnary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPassaUnary" ):
                listener.exitPassaUnary(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPassaUnary" ):
                return visitor.visitPassaUnary(self)
            else:
                return visitor.visitChildren(self)


    class PotenciacaoContext(PowerContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExpressaoParser.PowerContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def unary(self):
            return self.getTypedRuleContext(ExpressaoParser.UnaryContext,0)

        def power(self):
            return self.getTypedRuleContext(ExpressaoParser.PowerContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPotenciacao" ):
                listener.enterPotenciacao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPotenciacao" ):
                listener.exitPotenciacao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPotenciacao" ):
                return visitor.visitPotenciacao(self)
            else:
                return visitor.visitChildren(self)



    def power(self):

        localctx = ExpressaoParser.PowerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_power)
        try:
            self.state = 48
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = ExpressaoParser.PotenciacaoContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 43
                self.unary()
                self.state = 44
                self.match(ExpressaoParser.T__4)
                self.state = 45
                self.power()
                pass

            elif la_ == 2:
                localctx = ExpressaoParser.PassaUnaryContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.unary()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnaryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExpressaoParser.RULE_unary

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PassaAtomContext(UnaryContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExpressaoParser.UnaryContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def atom(self):
            return self.getTypedRuleContext(ExpressaoParser.AtomContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPassaAtom" ):
                listener.enterPassaAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPassaAtom" ):
                listener.exitPassaAtom(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPassaAtom" ):
                return visitor.visitPassaAtom(self)
            else:
                return visitor.visitChildren(self)


    class ValorAbsolutoContext(UnaryContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExpressaoParser.UnaryContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def unary(self):
            return self.getTypedRuleContext(ExpressaoParser.UnaryContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValorAbsoluto" ):
                listener.enterValorAbsoluto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValorAbsoluto" ):
                listener.exitValorAbsoluto(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValorAbsoluto" ):
                return visitor.visitValorAbsoluto(self)
            else:
                return visitor.visitChildren(self)


    class FatorialContext(UnaryContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExpressaoParser.UnaryContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def unary(self):
            return self.getTypedRuleContext(ExpressaoParser.UnaryContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFatorial" ):
                listener.enterFatorial(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFatorial" ):
                listener.exitFatorial(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFatorial" ):
                return visitor.visitFatorial(self)
            else:
                return visitor.visitChildren(self)



    def unary(self):

        localctx = ExpressaoParser.UnaryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_unary)
        try:
            self.state = 55
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                localctx = ExpressaoParser.FatorialContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.match(ExpressaoParser.T__5)
                self.state = 51
                self.unary()
                pass
            elif token in [7]:
                localctx = ExpressaoParser.ValorAbsolutoContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 52
                self.match(ExpressaoParser.T__6)
                self.state = 53
                self.unary()
                pass
            elif token in [8, 10]:
                localctx = ExpressaoParser.PassaAtomContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 54
                self.atom()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExpressaoParser.RULE_atom

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class NumeroContext(AtomContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExpressaoParser.AtomContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(ExpressaoParser.NUMBER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumero" ):
                listener.enterNumero(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumero" ):
                listener.exitNumero(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumero" ):
                return visitor.visitNumero(self)
            else:
                return visitor.visitChildren(self)


    class ParentesisContext(AtomContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExpressaoParser.AtomContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ExpressaoParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParentesis" ):
                listener.enterParentesis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParentesis" ):
                listener.exitParentesis(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParentesis" ):
                return visitor.visitParentesis(self)
            else:
                return visitor.visitChildren(self)



    def atom(self):

        localctx = ExpressaoParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_atom)
        try:
            self.state = 62
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                localctx = ExpressaoParser.ParentesisContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.match(ExpressaoParser.T__7)
                self.state = 58
                self.expr(0)
                self.state = 59
                self.match(ExpressaoParser.T__8)
                pass
            elif token in [10]:
                localctx = ExpressaoParser.NumeroContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.match(ExpressaoParser.NUMBER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[1] = self.expr_sempred
        self._predicates[2] = self.term_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 3)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 2)
         

    def term_sempred(self, localctx:TermContext, predIndex:int):
            if predIndex == 2:
                return self.precpred(self._ctx, 3)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 2)
         




